trying to fix spacing

--- a/src/signup.css
+++ b/src/signup.css
@@ -1,5 +1,5 @@
 .SignUp {
-  padding-top: 165px;
+  padding-top: 200px;
   background: linear-gradient(to bottom, #4117e5, #9a348e, #4117e5);
   min-height: 100vh;
   color: white;
